Add bolding and italisation

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mombasa County</title>
+        <title><strong>Mombasa County</strong> </title>
         <link href="index.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>This is my portfolio</h1>
+        <h1>Mombasa Island</h1>
+          <p>Mombasa Island is located on the <em>Kenyan coast</em> Indian ocean.</p>
         
     </body>
 </html>
