Add list of constituencies

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title><strong>Mombasa County</strong> </title>
+        <title>Mombasa County</title>
         <link href="index.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Mombasa Island</h1>
           <p>Mombasa Island is located on the <em>Kenyan coast</em> Indian ocean.</p>
-        
+          <img src="download.jpg" alt="A photo of Mombasa city">
+
+        <h2><strong>History of Mombasa</strong> </h2>
+          <P>Part of the Mombasa city is located on the Island inclusive of Old Town</P>
+          <P>The Old Town of Mombasa is located at the Eastern of the Island.</P>
+          <p>The old harbour which is named as Port Tudor and guarded by fort Jesus separates the Island from the nothern mainland.</p>
+          <P>Mombasa county has got six constituencies namely:</P>
+          <ol>
+            <li>Changamwe</li>
+            <li>Jomvu</li>
+            <li>Kisauni</li>
+            <li>Nyali</li>
+            <li>Likoni</li>
+            <li>Mvita</li>
+          </ol>
     </body>
 </html>
