--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
             <li>Likoni</li>
             <li>Mvita</li>
           </ol>
+          <p>According to the census carried out in the year 2019, Mombasa county has got a population of  1,208,333 people. The county is regarded as one which has low population in Kenya.</p>
+          <P>Mombasa is the oldest town in the country which was inhabited by the Arab traders who arrived at around the 8th centuary.</P>
+          <P>The Arabs traded ivory, jewellery and slaves.</P>
+          <p>The history books narrates that they sailed to the coast of Kenya through the help of moonson winds from the first centuary AD who continued to build along the coast.</p>
+          <p>The arabs intermarried with Bantus which led to Swahili language</p>
+          <P>In 1498, the portuguese navagitor Vasco Da Gamma visted Mombasa this awakened the portuguese and two years later they came to Mombasa and built Fort Jesus so as they can establish the Portugeese rule.</P>
+          
     </body>
 </html>
