--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="index.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Mombasa Island</h1>
+        <h1 class="Island">MOMBASA ISLAND</h1>
           <p>Mombasa Island is located on the <em>Kenyan coast</em> Indian ocean.</p>
           <img src="download.jpg" alt="A photo of Mombasa city">
 
