Additional author's info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1 class="Island">MOMBASA ISLAND</h1>
-          <p>Mombasa Island is located on the <em>Kenyan coast</em> Indian ocean.</p>
+          <p id="located">Mombasa Island is located on the <em>Kenyan coast</em> Indian ocean.</p>
           <img src="download.jpg" alt="A photo of Mombasa city">
 
         <h2><strong>History of Mombasa</strong> </h2>
