--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           <p id="located">Mombasa Island is located on the <em>Kenyan coast</em> Indian ocean.</p>
           <img src="download.jpg" alt="A photo of Mombasa city">
 
+      <div class="Mombasa">   
         <h2><strong>History of Mombasa</strong> </h2>
           <P>Part of the Mombasa city is located on the Island inclusive of Old Town</P>
           <P>The Old Town of Mombasa is located at the Eastern of the Island.</P>
@@ -22,13 +23,16 @@
             <li>Likoni</li>
             <li>Mvita</li>
           </ol>
+      </div>    
         <p class="According">According to the census carried out in the year 2019, Mombasa county has got a population of  1,208,333 people. The county is regarded as one which has low population in Kenya.</p>
         <P>Mombasa is the oldest town in the country which was inhabited by the Arab traders who arrived at around the 8th centuary.</P>
         <P>The Arabs traded ivory, jewellery and slaves.</P>
+    <div class="arabs">   
         <p>The history books narrates that they sailed to the coast of Kenya through the help of moonson winds from the first centuary AD who continued to build along the coast.</p>
         <p>The arabs intermarried with Bantus which led to Swahili language</p>
         <P>In 1498, the portuguese navagitor Vasco Da Gamma visted Mombasa this awakened the portuguese and two years later they came to Mombasa and built Fort Jesus so as they can establish the Portugeese rule.</P>
         <p>There were two ruling families in Mombasa i.e Mazurui and Bussaid family from Zanzibar.</p>
         <p>When Seyyid Said arrived at the Kenyan Coast he replaced them with his own representative in 1837.</p>
+    </div>    
   </body>
 </html>
