Include paragraph of h3

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         <P>In 1498, the portuguese navagitor Vasco Da Gamma visted Mombasa this awakened the portuguese and two years later they came to Mombasa and built Fort Jesus so as they can establish the Portugeese rule.</P>
         <p>There were two ruling families in Mombasa i.e Mazurui and Bussaid family from Zanzibar.</p>
         <p>When Seyyid Said arrived at the Kenyan Coast he replaced them with his own representative in 1837.</p>
-    </div>    
+    </div>  
+     
+    <h3>SWAHILI DISHES</h3>
+    <P>The most popular swahili dishes in Mombasa are:</P>
+    <ul>
+      <li>Samosa; a fried pastry ussully filled beef or dengu</li>
+      <li>Mkate wa mayai</li>
+      <li>Mahamri; doughnut like always baked with coconut</li>
+      <li>Kaimati</li>
+      <li>Bhajia</li>
+    </ul>
   </body>
 </html>
