Add sidebar css styling

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <p>When Seyyid Said arrived at the Kenyan Coast he replaced them with his own representative in 1837.</p>
     </div>  
      
+    <div class="sidebar">
     <h3>SWAHILI DISHES</h3>
     <P>The most popular swahili dishes in Mombasa are:</P>
     <ul>
@@ -43,6 +44,11 @@
       <li>Mahamri; doughnut like always baked with coconut</li>
       <li>Kaimati</li>
       <li>Bhajia</li>
+      <li>Mkate wa nazi</li>
+      <li>Viazi karai</li>
+      <li>Mkate wa sinia</li>
+      <li>Mitai</li>
     </ul>
+  </div>
   </body>
 </html>
