test-box styling

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
         <p>When Seyyid Said arrived at the Kenyan Coast he replaced them with his own representative in 1837.</p>
     </div>  
      
-    <div class="sidebar">
-    <h3>SWAHILI DISHES</h3>
+  <div class="sidebar">
+  <h3>SWAHILI DISHES</h3>
     <P>The most popular swahili dishes in Mombasa are:</P>
     <ul>
       <li>Samosa; a fried pastry ussully filled beef or dengu</li>
+      <img src="file:///home/fidelis/Downloads/Samosa.jpg" alt="photo of bhajia"
       <li>Mkate wa mayai</li>
       <li>Mahamri; doughnut like always baked with coconut</li>
+      <img src="file:///home/fidelis/Downloads/Mahamri.jpg" alt="photo of a hamri"
       <li>Kaimati</li>
       <li>Bhajia</li>
       <li>Mkate wa nazi</li>
@@ -50,5 +52,19 @@
       <li>Mitai</li>
     </ul>
   </div>
+  </body>
+  <body>
+    <h1>COASTAL BEACHES AND RESORT</h1>
+    <div class="test-box">
+    <P>Mombsa has got the best beaches, hotels and resorts.</P>
+    <p>This ranks Mombasa as the highest city that attracts tourists in Kenya due to the coasta sandy beaches and sun.</p>
+    <p>Below are some luxurious beaches and resorts in Mombasa:</p>
+    </div>
+    <ol>
+      <li>PrideInn flamingo beach resort and Spa</li>
+      <li>Blue Marlin Beach Hotel</li>
+      <li>Nyali Sun AFrica beach and & Spa</li>
+      <li>Leopard beach resort and Spa</li>
+    </ol>
   </body>
 </html>
